test/algeff/wrong/ops5.kk.out
test/algeff/wrong/ops5.kk(10,21): error: invalid syntax
 unexpected '(': local parameters are no longer supported, use a local 'var' instead